# open-redact-pdf

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cliff.toml  justfile  mkdocs.yml  package.json  pnpm-lock.yaml  release.toml  tsconfig.base.json
.github/workflows/: ci.yml  deploy-demo.yml  docs.yml  release.yml
apps/demo-web/: index.html  package.json  vite.config.js  vite.config.ts
apps/demo-web/src/: App.js  App.tsx  app.css  main.tsx
apps/demo-web/src/components/: PageView.tsx  Sidebar.tsx  Toolbar.tsx
crates/open_redact_pdf/: Cargo.toml
crates/open_redact_pdf/src/: api.rs  lib.rs
crates/pdf_content/: Cargo.toml
crates/pdf_content/src/: content.rs  lib.rs
crates/pdf_graphics/: Cargo.toml
crates/pdf_graphics/src/: geometry.rs  lib.rs
crates/pdf_objects/: Cargo.toml
crates/pdf_objects/src/: crypto.rs  document.rs  error.rs  lib.rs  parser.rs  pubsec.rs  serializer.rs  stream.rs  types.rs
crates/pdf_redact/: Cargo.toml
crates/pdf_redact/src/: image_mask.rs  lib.rs  redact.rs
crates/pdf_targets/: Cargo.toml
crates/pdf_targets/src/: lib.rs  targets.rs
crates/pdf_text/: Cargo.toml
crates/pdf_text/src/: lib.rs  text.rs
crates/pdf_wasm/: Cargo.toml
crates/pdf_wasm/src/: lib.rs  wasm_api.rs
crates/pdf_writer/: Cargo.toml
crates/pdf_writer/src/: lib.rs  writer.rs
docs/: _config.yml  architecture.md  development.md  getting-started.md  index.md  publishing.md  roadmap.md  security-model.md  why-not-overlays.md
docs/guides/: browser-integration.md  encrypted-pdfs.md  redaction-workflow.md  releasing.md  testing-and-fixtures.md
docs/internals/: 00-reading-order.md  01-architecture-overview.md  02-pdf-primer.md  03-parsing-model.md  04-object-model.md  05-graphics-state.md  06-text-system.md  07-search-geometry.md  08-redaction-targets.md  09-redaction-pipeline.md  10-writer.md  11-wasm-boundary.md  12-security-model.md  13-limitations.md  14-glossary.md  15-spec-to-code.md  16-top-ten-decisions.md
docs/reference/: rust-api.md  supported-subset.md  target-model.md  ts-sdk.md  workspace-crates.md
scripts/: build-wasm.mjs  check-release-version.mjs  ensure-demo-artifacts.mjs  publish-crates.sh
tests/fixtures/: README.md  generate-fixtures.mjs
tests/integration/: end_to_end.rs
