[workspace]
members = [
    "crates/open_redact_pdf",
    "crates/pdf_objects",
    "crates/pdf_content",
    "crates/pdf_graphics",
    "crates/pdf_text",
    "crates/pdf_targets",
    "crates/pdf_redact",
    "crates/pdf_writer",
    "crates/pdf_wasm",
]
resolver = "2"

[workspace.package]
authors = ["Fabio Fontana <me@fabifont.dev>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fabifont/open-redact-pdf"
rust-version = "1.85"
version = "0.5.0"

[workspace.dependencies]
aes = "0.8"
cms = { version = "0.2", features = ["builder"] }
const-oid = "0.9"
der = "0.7"
flate2 = "1.1"
getrandom = "0.2"
js-sys = "0.3"
md-5 = "0.10"
pkcs8 = "0.10"
rand_chacha = "0.3"
rand_core = "0.6"
rsa = { version = "0.9", features = ["sha2", "pem"] }
sha1 = "0.10"
sha2 = "0.10"
spki = "0.7"
x509-cert = { version = "0.2", features = ["builder"] }
proptest = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-test = "0.3"
