[package]
name = "open-redact-pdf"
description = "Browser-first PDF redaction engine for structured, non-overlay PDF redaction via WebAssembly."
keywords = ["pdf", "redaction", "wasm", "document", "privacy"]
categories = ["wasm", "text-processing", "encoding", "parser-implementations"]
homepage = "https://fabifont.github.io/open-redact-pdf/"
readme = "../../README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "open_redact_pdf"

[dependencies]
pdf_content = { path = "../pdf_content", version = "0.1.0" }
pdf_graphics = { path = "../pdf_graphics", version = "0.1.0" }
pdf_objects = { path = "../pdf_objects", version = "0.1.0" }
pdf_redact = { path = "../pdf_redact", version = "0.1.0" }
pdf_targets = { path = "../pdf_targets", version = "0.1.0" }
pdf_text = { path = "../pdf_text", version = "0.1.0" }
pdf_writer = { path = "../pdf_writer", version = "0.1.0" }
serde.workspace = true

[dev-dependencies]
pdf_objects = { path = "../pdf_objects", version = "0.1.0" }

[[test]]
name = "integration_end_to_end"
path = "../../tests/integration/end_to_end.rs"
