[package]
name = "open-redact-pdf-content"
description = "PDF content stream parsing and operation modeling for open-redact-pdf."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "pdf_content"

[dependencies]
pdf_graphics = { package = "open-redact-pdf-graphics", path = "../pdf_graphics", version = "0.4.0" }
pdf_objects = { package = "open-redact-pdf-objects", path = "../pdf_objects", version = "0.4.0" }
serde.workspace = true
