[package]
name = "pdf_graphics"
description = "PDF page-space geometry and transform helpers for open-redact-pdf."
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
