[package]
name = "pdf_objects"
description = "Low-level PDF object model, parser, and serializer for open-redact-pdf."
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
flate2.workspace = true
pdf_graphics = { path = "../pdf_graphics", version = "0.1.0" }
serde.workspace = true

[dev-dependencies]
proptest.workspace = true
