[package]
name = "open-redact-pdf-objects"
description = "Low-level PDF object model, parser, and serializer for open-redact-pdf."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "pdf_objects"

[dependencies]
flate2.workspace = true
pdf_graphics = { package = "open-redact-pdf-graphics", path = "../pdf_graphics", version = "0.1.0" }
serde.workspace = true

[dev-dependencies]
proptest.workspace = true
