[package]
name = "open-redact-pdf-objects"
description = "Low-level PDF object model, parser, and serializer for open-redact-pdf."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "pdf_objects"

[dependencies]
aes.workspace = true
cms.workspace = true
const-oid.workspace = true
der.workspace = true
flate2.workspace = true
md-5.workspace = true
pdf_graphics = { package = "open-redact-pdf-graphics", path = "../pdf_graphics", version = "0.5.0" }
pkcs8.workspace = true
rsa.workspace = true
serde.workspace = true
sha1.workspace = true
sha2.workspace = true
spki.workspace = true
x509-cert.workspace = true

[dev-dependencies]
proptest.workspace = true
rand_chacha.workspace = true
rand_core.workspace = true
