[package]
name = "pdf_redact"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
pdf_content = { path = "../pdf_content" }
pdf_graphics = { path = "../pdf_graphics" }
pdf_objects = { path = "../pdf_objects" }
pdf_targets = { path = "../pdf_targets" }
pdf_text = { path = "../pdf_text" }
serde.workspace = true

