[package]
name = "pdf_text"
description = "Text extraction and search geometry for open-redact-pdf."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
pdf_content = { path = "../pdf_content", version = "0.1.0" }
pdf_graphics = { path = "../pdf_graphics", version = "0.1.0" }
pdf_objects = { path = "../pdf_objects", version = "0.1.0" }
serde.workspace = true
