[package]
name = "open-redact-pdf-text"
description = "Text extraction and search geometry for open-redact-pdf."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "pdf_text"

[dependencies]
pdf_content = { package = "open-redact-pdf-content", path = "../pdf_content", version = "0.3.0" }
pdf_graphics = { package = "open-redact-pdf-graphics", path = "../pdf_graphics", version = "0.3.0" }
pdf_objects = { package = "open-redact-pdf-objects", path = "../pdf_objects", version = "0.3.0" }
serde.workspace = true
