[package]
name = "pdf_writer"
description = "Deterministic full-save PDF rewrite support for open-redact-pdf."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
pdf_objects = { path = "../pdf_objects", version = "0.1.0" }
