[package]
name = "open-redact-pdf-writer"
description = "Deterministic full-save PDF rewrite support for open-redact-pdf."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "pdf_writer"

[dependencies]
pdf_objects = { package = "open-redact-pdf-objects", path = "../pdf_objects", version = "0.5.0" }
